# clion-blinky

./: .gitignore  CMakeLists.txt  linker_script.ld  readme.md  toolchain.cmake
